# sparktutor

./: .gitignore  INTEGRATION_GUIDE.md  README.md  ai_science_teacher.py  ai_teacher_interface.html  env.example  index.html  pyproject.toml  teacher_debug.html
css/: style.css
js/: main.js  ui.js
test_animations/: how_airplanes_fly.html  integration_area_under_curve.html  ladder_safety.html  nepal_heritage.html  phases_of_moon.html  photosynthesis.html  projectile_motion.html  tree_height.html
